fix "dark theme visibility of File path"

--- a/src/main/java/org/jabref/gui/Base.css
+++ b/src/main/java/org/jabref/gui/Base.css
@@ -642,6 +642,10 @@
     -fx-background-color: -jr-warn;
 }
 
+.file-row-text{
+    -fx-fill: -jr-search-text;
+}
+
 .combo-box-base {
     -fx-background-color: -fx-outer-border, -fx-control-inner-background;
     -fx-background-insets: 0, 1;
